# coclip-monorepo

./: .gitignore  README.md  Taskfile.yml  go.work  go.work.sum  pnpm-workspace.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
apps/coclip-frontend/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  progress_frontend.md
infra/docker/: docker-compose.yml
services/engine/: .env.example  .gitignore  NOTE.md  main.py  modify_speaker.py  package-lock.json  pyproject.toml
services/engine/app/api/routes/: jobs.py  social.py  transcribe.py
services/engine/app/core/: config.py  database.py
services/engine/app/graphs/: __init__.py  video_processing_graph.py
services/engine/app/graphs/nodes/: __init__.py  analysis_node.py  editing_node.py  finalization_node.py  hook_generation_node.py  transcription_node.py
services/engine/app/middleware/: auth.py
services/engine/app/models/: __init__.py
services/engine/app/schemas/: graph_schemas.py  transcription.py
services/engine/app/tools/: transcriber.py
services/engine/app/utils/: abort_checker.py  downloader.py  filename.py  logging.py  progress_tracker.py  speaker_detector.py  subtitle_generator.py  tiktok_playwright_uploader.py  tiktok_uploader.py  tts_engine.py  video_formats.py  youtube_uploader.py
services/engine/app/workers/: transcription_worker.py
services/engine/scripts/: test_f5tts_deps.py  test_hook_text.py
services/engine/tests/scripts/: check_gpu.py  diagnostic_yt.py  main_2.py  response.json  test_av_sync.py  test_filename_utils.py  test_hook_clip.py  test_integrated_f5.py  test_piper_tts.py  test_smart_crop.py  test_subtitle_preview.py  test_torchaudio.py  test_whisperx.py  test_youtube_download.py  verify_fix.py
(+76 files in other folders)
